[gd_scene load_steps=11 format=3 uid="uid://ebxnr7an6arh"]

[ext_resource type="Script" uid="uid://lj0r345fx5mj" path="res://assets/bee.gd" id="1_bg6rv"]
[ext_resource type="Texture2D" uid="uid://c5o464lh200ja" path="res://img/character/Enemies/bee compressed.png" id="1_wnux6"]
[ext_resource type="Texture2D" uid="uid://jcvikc241btk" path="res://img/character/Enemies/wingMan2.png" id="2_mksdu"]
[ext_resource type="Texture2D" uid="uid://fbmdei2xtcds" path="res://img/character/Enemies/wingMan3.png" id="3_bg6rv"]
[ext_resource type="Texture2D" uid="uid://de7v3qyhwao0" path="res://img/character/Enemies/wingMan4.png" id="4_yq484"]
[ext_resource type="AudioStream" uid="uid://cwahu06v8c53w" path="res://audio/crack.mp3" id="5_0etg0"]
[ext_resource type="AudioStream" uid="uid://cc71stphbapbk" path="res://audio/mamamamown.mp3" id="7_yq484"]

[sub_resource type="SpriteFrames" id="SpriteFrames_lvlku"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_wnux6")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mksdu")
}, {
"duration": 1.0,
"texture": ExtResource("3_bg6rv")
}, {
"duration": 1.0,
"texture": ExtResource("4_yq484")
}, {
"duration": 1.0,
"texture": ExtResource("3_bg6rv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ex8sg"]
size = Vector2(21.9999, 3.85089)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yysgw"]
size = Vector2(16.5509, 1.74229)

[node name="bee1" type="Area2D" groups=["ennemi"]]
scale = Vector2(0.34, 0.34)
script = ExtResource("1_bg6rv")
metadata/_edit_group_ = true

[node name="bee" type="AnimatedSprite2D" parent="."]
position = Vector2(7.77209, -36.4531)
sprite_frames = SubResource("SpriteFrames_lvlku")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8.82352, -76.4706)
scale = Vector2(4.12119, -4.44306)
shape = SubResource("RectangleShape2D_ex8sg")

[node name="dead_bee" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_0etg0")

[node name="dead_player" type="Area2D" parent="."]
position = Vector2(-1132.35, 982.353)
scale = Vector2(2.94118, 2.94118)

[node name="collision_dead" type="CollisionShape2D" parent="dead_player"]
position = Vector2(388, -343)
scale = Vector2(1.44121, 12.2012)
shape = SubResource("RectangleShape2D_yysgw")

[node name="mort" type="AudioStreamPlayer2D" parent="dead_player"]
position = Vector2(-109.036, -1329.85)
scale = Vector2(1.94707, 1.94707)
stream = ExtResource("7_yq484")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="dead_player" to="." method="_on_dead_player_body_entered"]
